--- a/ResProjekatAA/AuthenticationDB/AuthenticationDB.csproj
+++ b/ResProjekatAA/AuthenticationDB/AuthenticationDB.csproj
@@ -40,7 +40,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AuthenticationInterfaceDB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfejsi\Interfejsi.csproj">
+      <Project>{f1fd4f27-671b-49bd-afc6-5306cd3c1f97}</Project>
+      <Name>Interfejsi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
