--- a/ResProjekatAA/ResProjekatAA/ResProjekatAA.csproj
+++ b/ResProjekatAA/ResProjekatAA/ResProjekatAA.csproj
@@ -44,9 +44,16 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserInterface.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Interfejsi\Interfejsi.csproj">
+      <Project>{f1fd4f27-671b-49bd-afc6-5306cd3c1f97}</Project>
+      <Name>Interfejsi</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
