test - prilikom verifikovanja da li je neki od arguemnta null JSON

--- a/ResProjekatAA/AuthenticationJSONTEST/AuthenticationJSONTEST.csproj
+++ b/ResProjekatAA/AuthenticationJSONTEST/AuthenticationJSONTEST.csproj
@@ -50,6 +50,7 @@
   <ItemGroup>
     <Compile Include="CuvajPodatkeJSON.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="VerifikovanjeKorisnickihPodatakaJSON.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
